@@ -1,0 +1,3 @@
+<configuration>
+  <dllmap dll="AtsPluginProxy.dll" target="/usr/lib/openbve/AtsPluginProxy.so"/>
+</configuration>
