@@ -1,0 +1,2 @@
+usr/share/doc/openbve-atspluginproxy
+usr/lib/openbve/
