@@ -1,0 +1,1 @@
+AtsPluginProxy/AtsPluginProxy.so usr/lib/openbve
